syntax="proto3";

option go_package = "./proto";

package greet_service;

/*
gRPC ofrece una comunicación de streaming bidireccional. Esto significa que tanto el 
cliente como el servidor pueden enviar y recibir múltiples solicitudes y respuestas
simultáneamente en una sola conexión.
*/
/*
protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/greet.proto
*/
service GreetService{
    rpc SayHello(NoParam) returns (HelloResponse);
    rpc SayHelloServerStreaming(NameList) returns (stream HelloResponse);
    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);
    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);

}

//Podemos pasarle cualquier parametro
message NoParam{}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message NameList{
    repeated string names = 1;
}

message MessageList{
    repeated string messages = 1;
}